--- a/Helperland/helperland1.0/Views/Shared/form4.cshtml
+++ b/Helperland/helperland1.0/Views/Shared/form4.cshtml
@@ -19,3 +19,24 @@
 					</button>
 				</div>
 </form>
+
+
+ <button type="button" class="btn btn-primary d-none" id="complete" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  Launch demo modal
+</button>
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+	<div class="modal-content">
+	  <div class="modal-header">
+
+		<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+	  </div>
+	  <div class="modal-body">
+			  <h4 class="modal-title" id="ModalLabel_SID"></h4>
+			  <h5 id="Model_SID"></h5>
+	  </div>
+	  
+	</div>
+  </div>
+</div>
