--- a/Helperland/helperland1.0/Views/Shared/_Layout1.cshtml
+++ b/Helperland/helperland1.0/Views/Shared/_Layout1.cshtml
@@ -45,7 +45,7 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav faq-navbar-nav ms-auto">
 
-                    <a class="nav-link faq-nav-link faq-nav-link-border" href="#">Book now</a>
+                    <a class="nav-link faq-nav-link faq-nav-link-border" asp-controller="Customer" asp-action="BookService">Book now</a>
                     <a class=" nav-link faq-nav-link  faq-nav-link-border" asp-controller="Public" asp-action="price">Prices & services</a>
                     <a class="nav-link faq-nav-link  ">Warrenty</a>
                     <a class="nav-link faq-nav-link ">Blog</a>
