--- a/Helperland/helperland1.0/Views/UserManagement/BecomeAProvider.cshtml
+++ b/Helperland/helperland1.0/Views/UserManagement/BecomeAProvider.cshtml
@@ -5,6 +5,14 @@
 
 @model helperland1._0.Models.User
 
+@section Custom
+{
+ <link rel="stylesheet" href="~/css/style.css">
+
+
+
+}
+
 
 <!doctype html>
 <html lang="en">
