--- a/Helperland/helperland1.0/Views/UserManagement/CustomerSignUp.cshtml
+++ b/Helperland/helperland1.0/Views/UserManagement/CustomerSignUp.cshtml
@@ -4,6 +4,14 @@
 }
 @model helperland1._0.Models.User
 
+@section Custom
+{
+ <link rel="stylesheet" href="~/css/style.css">
+
+
+
+}
+
 <br/><br/>  <br/>
 <p class="contact-form-title">
     Create an account
