--- a/Helperland/helperland1.0/wwwroot/css/style.css
+++ b/Helperland/helperland1.0/wwwroot/css/style.css
@@ -21,6 +21,14 @@
     margin: 10%;
     text-align:center;
 }
+
+@media(min-width:992px) {
+
+    .navbar-content {
+        margin-left: auto !important;
+    }
+}
+
 /*Home page*/
 /*header*/
 .formwarning {
@@ -513,6 +521,8 @@ height: 54px;
    
    
 }
+
+
 
 /*image*/
 
