--- a/Helperland/helperland1.0/Views/Customer/CustomerDashboard.cshtml
+++ b/Helperland/helperland1.0/Views/Customer/CustomerDashboard.cshtml
@@ -6,84 +6,86 @@
 
 
 @section Custom
-{
- <link rel="stylesheet" href="~/css/customerDashboard.css">
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
- 
- 
-
-
-}
+ {
+<link rel="stylesheet" href="~/css/customerDashboard.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+ }
 
 
 
- 
-
-    <h1>Welcome <span> @ViewBag.Name </span></h1>
-
-    <section class="main_service clearfix">
-
-        <!-- tab -->
-
-       
-        <div class="tab" id="verticaltab">
 
 
-            <button class="tablinks" onclick="upcoming_service(event, 'dashboard')" id="dashboardTabBtn">Dashboard</button>
+<h1>Welcome <span> @ViewBag.Name </span></h1>
+
+<section class="main_service clearfix">
+
+    <!-- tab -->
 
 
-            <button class="tablinks" onclick="upcoming_service(event, 'service_history')" id="serviceHistroyTabBtn">
-                
-                
-                Service
-                History
-            
-            
-            </button>
-            <button class="tablinks" onclick="upcoming_service(event, 'service_schedule')"id="serviceScheduleTabBtn">
-                
-                
-                Service
-                Schedule
-            
-            
-            </button>
-
-            <button class="tablinks" onclick="upcoming_service(event, 'favourite_pros')" id="favouriteProsTabBtn"> Favourite Pros </button>
-            <button class="tablinks" onclick="upcoming_service(event, 'invoices')" id="invoiceTabBtn">Invoices</button>
-            <button class="tablinks" onclick="upcoming_service(event, 'notification')" id="notificationTabBtn"> Notifications</button>
+    <div class="tab" id="verticaltab">
 
 
-        </div>
-
-        <!-- table -->
+        <button class="tablinks" onclick="upcoming_service(event, 'dashboard')" id="dashboardTabBtn">Dashboard</button>
 
 
-        
-        @await Html.PartialAsync("CustomerDashboardPartial")
-      @* @await Html.PartialAsync("CustomerServiceHistoryPartial")
-        @await Html.PartialAsync("CustomerSettingPartial")*@
-        
-       
+        <button class="tablinks" onclick="upcoming_service(event, 'service_history')" id="serviceHistroyTabBtn">
 
 
-       
-    </section>
+            Service
+            History
+
+
+        </button>
+        <button class="tablinks" onclick="upcoming_service(event, 'service_schedule')" id="serviceScheduleTabBtn">
+
+
+            Service
+            Schedule
+
+
+        </button>
+
+        <button class="tablinks" onclick="upcoming_service(event, 'favourite_pros')" id="favouriteProsTabBtn"> Favourite Pros </button>
+        <button class="tablinks" onclick="upcoming_service(event, 'invoices')" id="invoiceTabBtn">Invoices</button>
+        <button class="tablinks" onclick="upcoming_service(event, 'notification')" id="notificationTabBtn"> Notifications</button>
+        <button class="tablinks d-none" onclick="upcoming_service(event, 'customer_Settings')" id="SettingsTabBtn"> Setting </button>
+
+
+    </div>
+
+    <!-- table -->
+    @await Html.PartialAsync("CustomerDashboardPartial")
+    @await Html.PartialAsync("CustomerServiceHistoryPartial")
+    @await Html.PartialAsync("CustomerSettingPartial")
+
+
+
+
+
+</section>
 
 
 
 
 
 
-     
 
 
 
-    <!-- script -->
+
+<!-- script -->
 
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="~/js/customerDashboard.js"></script>
-    
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="~/js/customerDashboard.js"></script>
+<script type="text/javascript" src="https://unpkg.com/xlsx@0.15.1/dist/xlsx.full.min.js"></script>
+
+
+
+
+	<script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.11.3/r-2.2.9/rg-1.1.4/datatables.min.js"></script>
+	<script src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js"></script>
+	<script src="https://cdn.datatables.net/buttons/2.1.0/js/dataTables.buttons.min.js"></script>
+	<script src="https://cdn.datatables.net/buttons/2.1.0/js/buttons.html5.min.js"></script>
 
