--- a/Helperland/helperland1.0/Views/Public/Index.cshtml
+++ b/Helperland/helperland1.0/Views/Public/Index.cshtml
@@ -86,7 +86,7 @@
                                 <span id="UsernameNav">@ViewBag.Name</span>
                             </li>
                             <li><a asp-action="CustomerDashboard" asp-controller="Customer" class="dropdown-item">My Dashbord</a></li>
-                            <li><a class="dropdown-item">My Setting</a></li>
+                            <li><a class="dropdown-item" asp-controller="Customer" asp-action="CustomerDashboard" asp-route-Tablinks="SettingsTabBtn">My Setting</a></li>
                             <li><a class="dropdown-item" asp-controller="UserManagement" asp-action="Logout">Logout</a></li>
                         </ul>
                     </div>
