--- a/Helperland/helperland1.0/Views/Shared/CustomerDashboardPartial.cshtml
+++ b/Helperland/helperland1.0/Views/Shared/CustomerDashboardPartial.cshtml
@@ -25,6 +25,7 @@ String CurrentDate = DateTime.Now.AddDays(1).ToString("yyyy-MM-dd");
                     <th scope="col"> Service Provider</th>
                     <th scope="col"> Payment </th>
                     <th colspan="2" scope="col"> Action </th>
+
                 </tr>
             </thead>
             <tbody>
@@ -54,16 +55,26 @@ String CurrentDate = DateTime.Now.AddDays(1).ToString("yyyy-MM-dd");
                                 </td>
 
                                 <td data-label="Service Provider" class="clearfix">
-                                    @if (item.ServiceProvider != null)
+                                   @if (item.ServiceProvider != null)
                                     {
 
-                                        <div class="cap-icon"><img src="~/image/cap.png" alt=".."></div> @item.ServiceProvider
+                                        <div class="cap-icon"> <img src=@item.UserProfilePicture class="spavtar" alt=".."> </div><div style="font-weight:400" class="text-start"> @item.ServiceProvider</div>
                                         <div>
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star"></span>4
+                                            @for (int i = 1; i <= 5; i++)
+                                            {
+                                                @if (i <= item.AverageRating)
+                                                {
+                                                    <i class="fa fa-star " style="color:#ECB91C;"></i>
+
+                                                }
+                                                else
+                                                {
+                                                    <i class="fa fa-star " style="color:silver;"></i>
+
+                                                }
+
+                                            }
+                                            <span>@item.AverageRating</span>
                                         </div>
                                     }
                                 </td>
@@ -87,15 +98,7 @@ String CurrentDate = DateTime.Now.AddDays(1).ToString("yyyy-MM-dd");
 
 
 
-
-
-
-
-
-
-
-
-
+        
         <div class="card mobileview clearfix mx-auto" style="width:100%; padding:0% 5% 0% 5%; ">
             @if (Model.Count() > 0)
             {
@@ -104,7 +107,7 @@ String CurrentDate = DateTime.Now.AddDays(1).ToString("yyyy-MM-dd");
                     @if (item.Status == 1 || item.Status == 2)
                     {
 
-                        <div class="card-body">
+                        <div class="card-body" data-value=@item.ServiceRequestId>
                             <h6 class="d-inline pe-2">Service Id : </h6> @item.ServiceRequestId
                             <hr />
                             <span>
@@ -120,15 +123,24 @@ String CurrentDate = DateTime.Now.AddDays(1).ToString("yyyy-MM-dd");
                             {
 
                                 <h6 class="pe-2 ">Service Provider Name:</h6>
-                                <div class="cap-icon">  <img src="~/image/cap.png" alt="..">   </div>
+                                <div class="cap-icon">  <img src=@item.UserProfilePicture alt="..">   </div>
                                 @item.ServiceProvider
                                 <div>
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star"></span>
-                                    <span>4</span>
+                                  @for (int i = 1; i <= 5; i++)
+                                            {
+                                                @if (i <= item.AverageRating)
+                                                {
+                                                    <i class="fa fa-star " style="color:#ECB91C;"></i>
+
+                                                }
+                                                else
+                                                {
+                                                    <i class="fa fa-star " style="color:silver;"></i>
+
+                                                }
+
+                                            }
+                                    <span>@item.AverageRating</span>
                                 </div>
 
                                 <hr />
@@ -142,9 +154,9 @@ String CurrentDate = DateTime.Now.AddDays(1).ToString("yyyy-MM-dd");
                             <p class="price"><h6 class="d-inline pe-2">Price:</h6> &euro; @item.TotalCost </p>
                             <hr>
                             <div class="d-flex justify-content-around">
-                                <button class="rate ms-2" value=@item.ServiceRequestId  data-bs-toggle="modal" data-bs-target="#rescheduleModelServiceRequest">Reschedule</button>
+                                <button class="customerReschedule" value=@item.ServiceRequestId data-bs-toggle="modal" data-bs-target="#rescheduleModelServiceRequest">Reschedule</button>
 
-                                <button class="cancel me-2" value=@item.ServiceRequestId data-bs-toggle="modal" data-bs-target="#deleteModelServiceRequest">Cancel</button>
+                                <button class="customerCancel" value=@item.ServiceRequestId data-bs-toggle="modal" data-bs-target="#deleteModelServiceRequest">Cancel</button>
                             </div>
                         </div>
                     }
@@ -152,6 +164,15 @@ String CurrentDate = DateTime.Now.AddDays(1).ToString("yyyy-MM-dd");
 
             }
         </div>
+
+
+        
+
+
+
+
+
+       
     </div>
 
     <div class="pagenum">
@@ -242,33 +263,59 @@ String CurrentDate = DateTime.Now.AddDays(1).ToString("yyyy-MM-dd");
 
 <div class="modal" tabindex="-1" id="detailsModelServiceRequest">
     <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
+        <div class="modal-content text-start">
             <div class="modal-header">
                 <h5 class="modal-title">Service Details</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
-                <p>start date</p>
-                <p>Duration: <span>3.5</span> </p>
+            <div class="modal-body float-start">
+                <h4 id="CDSDDateTime">05/10/2021 08:00 - 11:30</h4>
+                <p>Duration: <span id="CDSDDuration"></span> </p>
                 <hr>
-                <p>Service id: <span>2</span></p>
-                <p>Extras: <span>inside friedge</span> </p>
-                <p>Net Amount: <span>75</span> </p>
+                <p>Service id: <span id="CDSDId"></span></p>
+                <div class="row"> <p class="col-2 d-inline">Extras: </p> <div class="col-10 d-inline" id="CDSDExtra"></div></div>
+
+                <p>Net Amount: <span id="CDSDAmount">8750 &euro;</span> </p>
+                <p id="CDSDStatus"></p>
                 <hr>
-                <p>Service Address:</p>
-                <p>Billing Address: same as cleaninng address</p>
-                <p>phone:</p>
-                <p>Email:</p>
+                <p>Service Address:<span id="CDSDAddress"></span></p>
+                <p>Billing Address: <span>same as cleaninng address</span></p>
+                <p>phone:<span id="CDSDPhone"></span></p>
+                <p>Email:<span id="CDSDEmail"> </span></p>
                 <hr>
-                <p>Comments</p>
-                <hr>
-                <div class="text-center">
-                    <button class="customerReschedule" data-bs-toggle="modal" data-bs-target="#rescheduleModelServiceRequest" id="' '">Reschedule</button><button class="customerCancel" data-bs-toggle="modal" data-bs-target="#deleteModelServiceRequest">Cancel</button>
-                </div>
+
+                <p>Comments <span id="CDSDComment"></span></p>
+                @*only show in dashboard status =1 & 2 *@
+                <span id="customerdashboardbtn">
+                   <hr>
+
+
+
+                    <div class="text-center  d-flex justify-content-around">
+                        <button class="customerReschedule" data-bs-toggle="modal" data-bs-target="#rescheduleModelServiceRequest" id="' '">Reschedule</button><button class="customerCancel" data-bs-toggle="modal" data-bs-target="#deleteModelServiceRequest">Cancel</button>
+                    </div> 
+
+                </span>
+                 @*only show in service history  status =3 *@
+                <span id="customerServiceHistorybtn">
+                    <hr>
+
+
+
+                    <div class="text-center  d-flex justify-content-around">
+                        <button class="rate">Rate </button>
+                    </div>
+
+                </span>
+
             </div>
         </div>
     </div>
 </div>
+
+
+
+
 
 
 
